# games

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  games.html  games.js  games.wasm  main.cpp
.github/workflows/: deploy.yml
assets/: assets.json
checkers/: CMakeLists.txt
checkers/include/checkers/: board.hpp  cell.hpp  clock.hpp  color.hpp  figure.hpp  game.hpp  king.hpp  man.hpp  play_state.hpp
checkers/src/: board.cpp  board.hpp  cell.cpp  cell.hpp  figure.cpp  figure.hpp  game.cpp  game.hpp  king.cpp  man.cpp  man.hpp  play_state.cpp  play_state.hpp  player.cpp  player.hpp
cmake/: add_test.cmake
core/: CMakeLists.txt
core/include/core/: event.hpp  game.hpp  game_object.hpp  game_state.hpp  game_state_machine.hpp  input.hpp  input_manager.hpp  interactive_renderable.hpp  keyboard_keys.hpp  movable.hpp  rect.hpp  texture.hpp  texture_flyweight.hpp  texture_manager.hpp  window.hpp
core/src/: game.cpp  game.hpp  game_object.cpp  game_object.hpp  game_state.cpp  game_state.hpp  game_state_machine.cpp  game_state_machine.hpp  input.cpp  input.hpp  input_manager.cpp  input_manager.hpp  inputable.cpp  inputable.hpp  interactive_renderable.cpp  interactive_renderable.hpp  keyboard_keys.hpp  movable.cpp  movable.hpp  rect.cpp  rect.hpp  renderable.cpp  renderable.hpp  texture.cpp  texture.hpp  vec.hpp  window.cpp  window.hpp
core/test/: CMakeLists.txt  vec_test.cpp
game/: CMakeLists.txt
game/include/game/: board.hpp  figure.hpp  inputable.hpp  player.hpp  renderable.hpp  table.hpp  texture.hpp  window.hpp
game/src/: game.cpp  game.hpp  renderable.cpp  renderable.hpp  texture.hpp  window.cpp  window.hpp
scripts/: build.sh  clean.sh  run.sh
test/: CMakeLists.txt  gtest_main.hpp  vec_test.cpp
utils/: CMakeLists.txt
utils/include/utils/: log.hpp  vec.hpp
utils/src/: log.cpp  log.hpp  vec.hpp
